# terminalSnake

./: .gitignore  CMakeLists.txt
src/: Game.c  Game.h  main.c
src/Map/: Map.c  Map.h
